--- a/MockingUnitTestsDemoApp/MockingUnitTestsDemoApp.csproj
+++ b/MockingUnitTestsDemoApp/MockingUnitTestsDemoApp.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\MockingUnitTestsDemoApp.Impl\MockingUnitTestsDemoApp.Impl.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
