Removed Async code, added League Controller, Player Controller, and Home Controller, and tests for the first two.

--- a/MockingUnitTestsDemoApp.Tests/MockingUnitTestsDemoApp.Tests.csproj
+++ b/MockingUnitTestsDemoApp.Tests/MockingUnitTestsDemoApp.Tests.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MockingUnitTestsDemoApp.Impl\MockingUnitTestsDemoApp.Impl.csproj" />
+    <ProjectReference Include="..\MockingUnitTestsDemoApp\MockingUnitTestsDemoApp.csproj" />
   </ItemGroup>
 
 </Project>
